feat: add post audio base route
